<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2013 Daniel Velazco

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <!-- App name -->
    <string name="app_name">Tinfoil for Facebook</string>
    <string name="app_name_short">Tinfoil</string>

    <!-- Labels -->
    <string name="lbl_dialog_alert">Uyarı</string>
    <string name="lbl_dialog_close">Kapat</string>
    <string name="lbl_dialog_ok">Tamam</string>
    <string name="loading_video">Video yükleniyor&#8230;</string>
    <string name="upload_file_choose">Dosya seç</string>
    <string name="lbl_yes">Evet</string>
    <string name="lbl_no">Hayır</string>
    <string name="lbl_save_image">Görüntüyü kaydet</string>

    <!-- Sharing -->
    <string name="share_action">Sayfayı paylaş</string>
    <string name="share_action_subject">Facebook sayfası</string>

    <!-- Context menu items -->
    <string name="menu_desktop">Masaüstü</string>
    <string name="menu_mobile">Mobil</string>
    <string name="menu_jump_top">En üste çık</string>
    <string name="menu_news_feed">Haber kaynağı</string>
    <string name="menu_share">Paylaş</string>
    <string name="menu_copy_url">Adresi kopyala</string>
    <string name="menu_refresh">Yenile</string>
    <string name="menu_notifications">Bildirimler</string>
    <string name="menu_messages">Mesajlar</string>
    <string name="menu_preferences">Tercihler</string>
    <string name="menu_about">Hakkında</string>
    <string name="menu_exit">Kapat</string>

    <!-- Preferences -->
    <string name="pref_cat_access">Facebook erişimi</string>
    <string name="pref_cat_general">Genel</string>
    <string name="pref_cat_proxy">Vekil sunucu</string>
    <string name="prefs_allow_checkins">Yer bildirimlerine izin ver</string>
    <string name="prefs_allow_checkins_sry">Yer bildirimi yaparken Facebook'un konumunuzu tahmin etmesine izin verir.</string>
    <string name="prefs_open_links_inside">Bağlantıları uygulama içinde aç</string>
    <string name="prefs_open_links_inside_sry">Facebook dışındaki bir adrese dokunduğunuzda adresi telefonun kendi tarayıcısı yerine uygulama içinde açar.</string>
    <string name="prefs_block_images">Resimleri engelle</string>
    <string name="prefs_block_images_sry">Resimlerin yüklenmesini engelleyerek zamanınızdan ve kotanızdan tasarruf edin.</string>
    <string name="pref_hide_ab">Eylem menüsünü otomatik gizle</string>
    <string name="pref_hide_ab_sry">Kullanılmadığında veya aşağı kaydırılırken eylem menüsünü otomatik gizler. Tekrar yukarı kaydırmak eylem menüsünü gösterir.</string>
    <string name="prefs_mobile_site">Mobile/Desktop site</string>
    <string name="prefs_mobile_site_sry">Mobil veya masaüstü siteyi kullanmaya zorla</string>
    <string name="prefs_enable_proxy">Vekil sunucuyu etkinleştir</string>
    <string name="prefs_enable_proxy_sry">Configure proxy for network requests.</string>
    <string name="prefs_proxy_host">Proxy host</string>
    <string name="prefs_proxy_port">Proxy port</string>

    <array name="prefs_mobile_site_list">
        <item>Oto.</item>
        <item>Mobil siteye zorla</item>
        <item>Masaüstü siteye zorla</item>
        <item>Basit siteye zorla</item>
        <item>Sıfır Facebook</item>
        <item>Facebook.onion</item>
    </array>
    <array name="prefs_mobile_site_list_values">
        <item>oto</item>
        <item>mobil</item>
        <item>masaüstü</item>
        <item>basit</item>
        <item>sıfır</item>
        <item>onion</item>
    </array>

    <string name="pref_about">Hakkında</string>
    <string name="pref_about_sry">Daniel Velazco tarafından yazılmıştır. Daha fazla bilgi için dokunun.</string>
    <!-- End preferences -->

    <string name="txt_save_image_success">Görüntü indirildi ve İndirlenler klasörüne kaydedildi</string>
    <string name="txt_save_image_failed">Görüntü kaydedilemedi</string>

    <!-- Orbot related strings -->
    <string name="market_orbot">market://search?q=pname:org.torproject.android</string>
    <string name="start_orbot_">Orbot başlatılsın mım?</string>
    <string name="orbot_not_running_start_it_question">Görünüşe göre Orbot çalışmıyor. Başlatmak ve Tor'a bağlanmak ister misiniz?</string>

    <!-- Text used on the "about" dialog -->
    <string name="txt_checkins_disables">\nFacebook konumunuza erişmek istiyor.\n
\nBüyük ihtimalle bilindik bir mekanda \"Yer bildirimi\" yapıyorsunuz. Tinfoil bu izinlerin kontrol edilebileceği ayara sahiptir, varsayılan olarak devre dışı bırakılmıştır.\n
\nBu izinleri tercihler menüsünden \"Yer bildirimlerine izin ver.\" seçeneği ile etkinleştirebilirsiniz.\n
\nTinfoil yalnızca \"Tahmnini konumunuzu\", tespit eder.GPS kullanmaz, yalnızca Mobil ağ ve Wi-Fi kullanarak pilinizden de tasarruf etmenizi sağlar.\n
\n</string>

    <!-- Text used on the "about" dialog -->
    <string name="txt_about">\nDaniel Velazco tarafından geliştirildi.
\nvelazcod@gmail.com
\nhttp://www.danvelazco.com\n
\n
\nKaynak kodu:
\nhttps://github.com/velazcod/Tinfoil-Facebook\n
\n
\nBu uygulama facebook'a girerken gizleyici şapka kullanmak isteyenler için üretildi. Facebook'a girerken sizin için bir tünel oluşturur. Ağ bağlantısı gerektirir, eğer bu konuda şüpheleriniz varsa, adresini paylaştığım kaynak kodlarını incelemekten çekinmeyin. Yaklaşık konum izinleri gerektirir fakat ayarlardan "Yer bildirimlerine izin ver" seçeneğini seçmediğiniz sürece çalışmaz.\n
\n</string>

</resources>
